src/objects/Eval_Field_Type__c.object
<CustomObject>
    <description>Fields types you can chose from which will be used on the Eval Object</description>
    <fields>
        <fullName>External_Field_Type_ID__c</fullName>
        <description>This ID can be used externally when uploading data.</description>
        <displayFormat>{0}</displayFormat>
        <externalId>true</externalId>
        <label>External Field Type ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>HTML_Element__c</fullName>
        <description>We may have to boolean types, one for a checkbox and another for a radio button...</description>
        <label>HTML Element</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Length__c</fullName>
        <label>Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>The SF native type for the field</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Boolean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>String</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Int</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Double</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Datetime</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Currency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dropdown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiselect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multicheckbox</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Eval Field Type</label>
    <nameField>
        <label>EvalFieldTypes Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Eval Field Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>